# ingrate

./: CMakeLists.txt  CMakePresets.json  Makefile.am  configure.ac  ingrate.cc  ingrate.cpp  ingrate.manifest  ingrate.rc  vcpkg.json
.github/workflows/: build-linux-static.yml  main.yml
m4/: ingrate.m4
src/: Makefile.inc  ingrate.c
